syntax = "proto3";

option java_package = "via.sep3.grpc.util";

message VoidMessage {
}